[tool.poetry]
name = "alastria-identity"
version = "0.4.0"
description = ""
authors = ["Javier Aguirre <javi@wealize.digital>"]
license = "MIT"
packages = [
    { include = "alastria_identity" }
]
homepage = "https://github.com/Wealize/alastria-identity-lib-py"
repository = "https://github.com/Wealize/alastria-identity-lib-py"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
web3 = "5.31.4"
requests = "2.32.5"
pytest = "6.2.5"
mock = "4.0.3"
jwcrypto = "0.8"
ecdsa = "0.19.1"
eth-abi = "2.2.0"
base58 = "1.0.3"
bitarray = "2.9.3"
cffi = "2.0.0"
cryptography = "46.0.2"
cytoolz = "0.12.3"
eth-account = "0.5.9"
eth-hash = "0.3.3"
eth-keyfile = "0.5.1"
eth-keys = "0.3.4"
eth-rlp = "0.2.1"
eth-typing = "2.3.0"
eth-utils = "1.10.0"
hexbytes = "0.3.1"
iniconfig = "2.1.0"
ipfshttpclient = "0.8.0a2"
jsonschema = "4.25.1"
lru-dict = "1.3.0"
multiaddr = "0.0.11"
netaddr = "1.3.0"
parsimonious = "0.8.1"
pluggy = "1.6.0"
protobuf = "3.19.5"
py = "1.11.0"
pycryptodome = "3.23.0"
rlp = "2.0.1"
setuptools = "72.1.0"
six = "1.17.0"
toml = "0.10.2"
toolz = "1.0.0"
varint = "1.0.2"
websockets = "9.1"
urllib3 = "2.5.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.5.4"
rope = "^0.18.0"
coverage = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"